@@ -1,6 +1,8 @@
 #ifndef _QGAIM_H_
 #define _QGAIM_H_
 
+#include <libgaim/conversation.h>
+
 #include <qpe/qpeapplication.h>
 #include <qvariant.h>
 
@@ -20,6 +22,9 @@ class QGaim : QObject
 		QGaimBListWindow *getBlistWindow() const;
 		QGaimAccountsWindow *getAccountsWindow() const;
 
+		void setLastActiveConvWindow(GaimWindow *win);
+		GaimWindow *getLastActiveConvWindow() const;
+
 	public slots:
 		void showBlistWindow();
 		void showAccountsWindow();
@@ -31,6 +36,7 @@ class QGaim : QObject
 		QPEApplication *app;
 		QGaimBListWindow *blistWin;
 		QGaimAccountsWindow *accountsWin;
+		GaimWindow *lastConvWin;
 };
 
 QGaim *qGaimGetHandle();
